WS: fix some mixer layout glitches on Safari

--- a/share/web_surfaces/builtin/mixer/main.css
+++ b/share/web_surfaces/builtin/mixer/main.css
@@ -40,20 +40,20 @@ div {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
     min-width: 120px;
 }
 
 .strip-meter-fader {
-    height: 100%;
+    display: flex;
+    flex: 1;
 }
 
 .toolkit-fader {
-    height: 100%;
+    /* empty */
 }
 
 .toolkit-level-meter {
-    height: 100%;
+    /* empty */
 }
 
 .toolkit-knob {
